Now functional script to install automaticaly the server.

--- a/Web/openvirtua-nginx.conf
+++ b/Web/openvirtua-nginx.conf
@@ -29,7 +29,7 @@ server {
 
         # PHP configuration.
         location ~ \.php$ {
-                fastcgi_pass   127.0.0.1:9000;
+                fastcgi_pass   unix:/var/run/php/php7.0-fpm.sock;
                 fastcgi_index  Components/Router.php;
                 fastcgi_intercept_errors on;
                 include fastcgi.conf;
